2003-03-31    <drew@loki.sai-office>

	* SkunkWeb/Services/httpd/protocol.py (HTTPMethodRequestParser._getEnv):
	made it so that it now adds all HTTP headers to the environment, not
	just the ones we thought of.

2003-03-28    <drew@loki.sai-office>

	* pylibs/PyDO/sapdbgenscript.py: supports autoincrement fields and
	unique fields that aren't necessarily pk's

	* pylibs/PyDO/sapdbconn.py: supports autoincrement fields and
	supports the SYSDATE stuff and in general better date handling.
	Unicode support.

	* pylibs/PyDO/operators.py: changes to support unicode

2003-03-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py (image): found and
	removed some 2.2 syntax (was using default iterator of
	dictionary), and made autosizing of images a configurable option.
	

2003-03-20  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection._initCookies):
	tolerate bad cookies by silently swallowing errors in cookie
	loading.  Very occasionally, someone has a cookie that will make
	Cookie.py barf when it tries to load it; this prevents an entire
	site going down for that unfortunate individual.

2003-03-13  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/usertracking.py: More comments (this
	time about Apache 2 and its cookie log format).

	* pylibs/Date/Locales.py: to suppress a DeprecationWarning
	in Python 2.3a2, added a magic "coding" indicator, as this
	file contains some non-ASCII characters.

	* pylibs/DT/DTLexer.py (findTags): now permit colons
	inside tags when not followed by a '>'.

2003-03-12  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/usertracking.py: added some comments about 
	apache configuration (for cookie logging).

2003-03-11  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/usertracking.py: added default cookie name.

	* SkunkWeb/configure.in, configure: added usertracking to list
	of services.
